<resources>
    <string name="app_name">ALC</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_alc">About ALC</string>
    <string name="title_activity_my_profile">My Profile</string>

    <string name="main_welcome">Welcome To ALC 4.0</string>

    <string name="profile_name">Akachukwu Adiele</string>
    <string name="profile_track">Track:   Android</string>
    <string name="profile_country">Country:   Nigeria</string>
    <string name="profile_email">Email:   akaadiele@gmail.com</string>
    <string name="profile_phone">Phone Number:   2347034349529</string>
    <string name="profile_slackUsername">Slack Username:   @akaadiele</string>
    <string name="profile_img">Profile Picture</string>

</resources>
